@@ -1,3 +1,8 @@
+2010-02-24
+
+	* src/sslmanager.c: fixed freeze when sending/receiving messages with
+	  STARTTLS and 'SSL certificate verify failed' dialog popped up.
+
 2010-02-19
 
 	* version 3.0.0rc
